# pacer

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/: timeline.cpp
bindings/pacer/: generate-bindings.py  nanobind_pacer.cpp  pyproject.toml
bindings/pacer/pacer/: __init__.pyi
docs/: ACCURACY.md  FIRST_LAP.md  PACKAGING.md  index.html
notebooks/: interpolation.ipynb
pacer/datatypes/: datatypes.hpp  ops.hpp
pacer/geometry/: geometry.cpp  geometry.hpp
pacer/gps-source/: CMakeLists.txt  gps-source.cpp  gps-source.hpp
pacer/laps/: laps.cpp  laps.hpp
packaging/: build_macos.sh  pacer.spec  rthook_ffmpeg.py
research/: diag_dop.py  notebook_vs_gps9.py  proto_smooth.py
research/startline/: README.md  _m3_behavior_dump.py  _m3_screenshot.py  _m3_view_compare.py  _m3_viewpath_dump.py  analyze.py  annotate_sat.py  cands_0060.json  extract_trace.py  final_proof.py  find_straight.py  georef_0060.json  overlay.py  plan_georef.py  plan_on_sat.py  plan_sf.json  satref.json  satref.py  satref2.py  satref3.py  satref_direct.json  sweep_GX010062.json  val_0062_current.json  verify_satref.py
studio/: PLAN.md  README.md  __init__.py  _calib.py  _signal.py  _validate_wallclock.py  app.py  bests.py  central_view.py  chapters.py  coaching.py  coaching_panel.py  compare_controller.py  consistency.py  consistency_panel.py  corner_model.py  corners.py  cross_reference.py  data_quality.py  demo.py  denoise_check.py  driving.py  driving_channels.py  export_data.py  export_video.py  gmeter.py  gmeter_overlay.py  help_dialog.py  ingest.py  lap_table.py  library.py  library_dialog.py  load.py  map_render.py  map_view.py  overlays.py  player_pane.py  plots_view.py  prefs.py  render_cache.py  (+12 more)
studio/assets/: pacer.icns
studio/dev/: _seam_diag.py  _smoke.py  _validate_wallclock.py  _verify_coaching.py  build_reference.py  denoise_check.py  diagnose.py  golden_session_dump.py  make_icon.py  print_track_entry.py  spike_dual_decode.py  transponder.py  ui_capture.py
studio/dev/research/: dump_imu.c  inventory.c  notebook_vs_gps9.py
studio/dev/research/startline/: README.md  _m3_compare.py  _m3_screenshot.py  _m3_viewpath_dump.py  annotate_sat.py  cands_0062.json  draw_on_sat.py  georef.py  overlay.py  satref.json  satref2.py  sweep.py  sweep_GX010060.json  val_0060_current.json
studio/docs/: gps-accuracy-research.md  start-line-verification.md  upstream-20ms-investigation.md
studio/docs/gps_research_scripts/: notebook_vs_gps9.py  validate_interp.py
tests/: CMakeLists.txt  _synthetic.py  golden_synthetic_baseline.json  load_hero6_baseline.json  test_accessible_cues.py  test_calibration.py  test_central_view_realqt.py  test_chapters.py  test_coaching.py  test_compare.py  test_consistency.py  test_coordinate_system.cpp  test_corners.py  test_cross_reference.py  test_data_quality.py  test_data_safety.py  test_demo.py  test_driving.py  test_export_data.py  test_export_video.py  test_fit_start_line.py  test_gapfill.py  test_gmeter.py  test_gmeter_overlay.py  test_golden_synthetic.py  test_gps_source.cpp  test_gps_source_bindings.py  test_import_ergonomics.py  test_ingest_equivalence.py  test_lap_timing.py  test_laps.cpp  test_layering.py  test_library.py  test_load_internals.py  test_load_pipeline.py  test_map_ghost.py  test_map_render.py  test_rainbow_map.py  test_scrub_conversion.py  test_session_pure.py  (+10 more)
