[project]
authors = [{ name = "eenndan" }]
dependencies = ["litgen @ git+https://github.com/pthom/litgen@b83e0ca75952031dbab328e230ff866f8076d14a"]
description = "Race-telemetry analysis studio (GoPro GPS/IMU → laps, deltas, synced video)"
name = "pacer"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "litgen"]
build-backend = "scikit_build_core.build"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pacer = { path = "bindings/pacer", editable = true }
# `studio` desktop app (PySide6 + pyqtgraph). See studio/.
pyside6 = ">=6.8"
pyqtgraph = ">=0.13"
# Phosphor (+ other) icon fonts as QIcons; works with PySide6 via QtPy. See studio/theme.icon.
qtawesome = ">=1.3"

[tool.pixi.tasks]
configure = "cmake -S . -B build/Release -G Ninja"
build = { cmd = "cmake --build build/Release", depends-on = ["configure"] }
# --timeout 480: a per-test ceiling well under CI's 20-min job cap, with headroom over the one
# legitimately-slow test (test_export_video, ~110 s ffmpeg encode). A hang dies at 8 min instead
# of eating the whole job, and a ctest timeout FLUSHES the test's buffered output (with
# --output-on-failure), surfacing the in-test faulthandler watchdog dump instead of an opaque
# 20-min job cancel that shows nothing (what made the C1 off-thread-load CI hang diagnosable).
test = { cmd = "ctest --test-dir build/Release --output-on-failure --timeout 480", depends-on = ["build"] }
gen-bindings = "python bindings/pacer/generate-bindings.py"
studio = { cmd = "python -m studio", depends-on = ["build"] }
# fmt excludes the litgen-GENERATED nanobind_pacer.cpp: the CI regen-drift gate
# requires it to match the generator's raw output byte-for-byte, so it must
# never be reformatted. fmt-check is the same file set, non-mutating (CI gate).
fmt = "git ls-files '*.cpp' '*.hpp' '*.h' '*.c' ':!bindings/pacer/nanobind_pacer.cpp' | xargs clang-format -i"
fmt-check = "git ls-files '*.cpp' '*.hpp' '*.h' '*.c' ':!bindings/pacer/nanobind_pacer.cpp' | xargs clang-format --dry-run --Werror"
lint = "ruff check ."

[tool.pixi.dependencies]
cmake = ">=4.0.2,<5"
scikit-build-core = ">=0.11.4,<0.12"
python = ">=3.13.5,<4"
catch2 = ">=3.15.0,<4"
ninja = ">=1.13.2,<2"
ruff = ">=0.15.16,<0.16"
clang-format = ">=22.1.7,<23"
ffmpeg = ">=7.1,<8"
